fix(spreadsheet): sheets bar overflows past container dimensions

--- a/packages/fluent/scss/spreadsheet/_layout.scss
+++ b/packages/fluent/scss/spreadsheet/_layout.scss
@@ -182,6 +182,7 @@
 
     .k-spreadsheet-sheets {
         flex: 1 1 auto;
+        overflow: hidden;
     }
     .k-spreadsheet-sheets .k-tabstrip-items-wrapper {
         border-width: 0;
